--- a/root/source/core/css/wide.scss
+++ b/root/source/core/css/wide.scss
@@ -1,10 +1,10 @@
 /**
- * [Client Name] - Wide CSS
+ * {%= name %} - Global CSS
  *
  * wide.css
  * author: Squiz Australia
  * change log: 
- *     [author email] - 01/01/2013- First revision
+ *     {%= author_email %} - 01/01/2013 - First revision
  */
 
 /*
