Added qunit tests to the build

--- a/root/source/modules/tabs/css/tabs.scss
+++ b/root/source/modules/tabs/css/tabs.scss
@@ -2,6 +2,14 @@
   @include list-reset();
 }
 
-.js-enabled .tabs-panel-hide {
+.tabs-panel-hide {
   @include screen-hide();
+}
+
+.tabs-panel-active {
+
+}
+
+.tabs-nav-link-active {
+
 }
