Removed grid body declaration. Imported grid into medium and wide styles

--- a/root/source/core/css/wide.scss
+++ b/root/source/core/css/wide.scss
@@ -10,3 +10,10 @@
 /*
  * Table of Contents
  */
+
+@import "common/variables.scss";
+@import "common/functions.scss";
+@import "common/mixins.scss";
+
+// Make the grid available or wide styles.
+@import "../../modules/grid/css/grid.scss";
