Added keyword replacement to JS & CSS files. Module CSS files now split into separate groups for the destination css. Added custom parameters to the initialisation template. Added basic overlay code.

--- a/root/source/core/css/medium.scss
+++ b/root/source/core/css/medium.scss
@@ -1,10 +1,12 @@
 /**
- * {%= name %} - Global CSS
+ * {%= client_name %} - {%= client_project %}
+ * Medium CSS
  *
- * medium.css
- * author: Squiz Australia
- * change log: 
- *     {%= author_email %} - 01/01/2013 - First revision
+ * version: @@version
+ * file:    medium.css
+ * author:  Squiz Australia
+ * change log:
+ *     {%= author_email %} - @@date - First revision
  */
 
 /*
