--- a/root/source/core/css/global.scss
+++ b/root/source/core/css/global.scss
@@ -1,10 +1,12 @@
 /**
- * {%= name %} - Global CSS
+ * {%= client_name %} - {%= client_project %}
+ * Global CSS
  *
- * global.css
- * author: Squiz Australia
- * change log: 
- *     {%= author_email %} - 01/01/2013 - First revision
+ * version: @@version
+ * file:    global.css
+ * author:  Squiz Australia
+ * change log:
+ *     {%= author_email %} - @@date - First revision
  */
 
 /*
@@ -83,3 +85,6 @@
 
 /* -- 5.4. Tabs --*/
 @import "../../modules/tabs/css/tabs.scss";
+
+/* -- 5.5. Overlay --*/
+@import "../../modules/overlay/css/overlay.scss";
