--- a/root/source/core/css/wide.scss
+++ b/root/source/core/css/wide.scss
@@ -1,10 +1,12 @@
 /**
- * {%= name %} - Global CSS
+ * {%= client_name %} - {%= client_project %}
+ * Wide CSS
  *
- * wide.css
- * author: Squiz Australia
- * change log: 
- *     {%= author_email %} - 01/01/2013 - First revision
+ * version: @@version
+ * file:    wide.css
+ * author:  Squiz Australia
+ * change log:
+ *     {%= author_email %} - @@date - First revision
  */
 
 /*
