Fixed path to grid scss

--- a/root/source/core/css/medium.scss
+++ b/root/source/core/css/medium.scss
@@ -20,7 +20,7 @@
 @import "common/mixins.scss";
 
 // Make the grid available or medium styles.
-@import "../../modules/grid/css/grid.scss";
+@import "common/grid/grid.scss";
 
 /*
 --------------------
