--- a/root/source/modules/tabs/css/global.scss
+++ b/root/source/modules/tabs/css/global.scss
@@ -6,10 +6,24 @@
   @include screen-hide();
 }
 
-.tabs-panel-active {
-
+.tabs-nav-link,
+.tabs-nav-link:active,
+.tabs-nav-link:visited {
+    background: $example-bg-colour;
+    border-color: $example-border-color;
+    border-style: 1px solid;
+    border-right: none;
+    color: $example-bg-font-colour;
+    display: block;
+    padding: $example-default-padding/2 $example-default-padding;
+    text-decoration: none;
 }
-
-.tabs-nav-link-active {
-
+.tabs-nav-link.tabs-nav-link-active,
+.tabs-nav-link:hover {
+    background: lighten($example-bg-colour, 10%);
+}
+.tabs-panel-item {
+    border: 1px solid $example-border-color;
+    clear: left;
+    padding: $example-default-padding;
 }
