--- a/root/source/core/css/global.scss
+++ b/root/source/core/css/global.scss
@@ -25,6 +25,7 @@
 @import "common/variables.scss";
 @import "common/functions.scss";
 @import "common/mixins.scss";
+@import "common/example.scss";
 
 /*
 --------------------
