--- a/root/source/core/css/common/variables.scss
+++ b/root/source/core/css/common/variables.scss
@@ -14,5 +14,13 @@ $button-text: #000;
 $button-background-hover: #000;
 $button-text-hover: #fff;
 
+// Border colours
+$basic-colour: #ccc;
+$highlight-colour: #555;
+$highlight-text-colour: #fff;
+
+// Default padding.
+$default-padding: 1em;
+
 // Selection highlighting
 $content-selection-highlight: #b3d4fc;
