--- a/root/source/modules/tabs/css/global.scss
+++ b/root/source/modules/tabs/css/global.scss
@@ -9,21 +9,21 @@
 .tabs-nav-link,
 .tabs-nav-link:active,
 .tabs-nav-link:visited {
-    background: $example-bg-colour;
-    border-color: $example-border-color;
+    background: $highlight-colour;
+    border-color: $basic-colour;
     border-style: 1px solid;
     border-right: none;
-    color: $example-bg-font-colour;
+    color: $highlight-text-colour;
     display: block;
-    padding: $example-default-padding/2 $example-default-padding;
+    padding: $default-padding/2 $default-padding;
     text-decoration: none;
 }
 .tabs-nav-link.tabs-nav-link-active,
 .tabs-nav-link:hover {
-    background: lighten($example-bg-colour, 10%);
+    background: lighten($highlight-colour, 10%);
 }
 .tabs-panel-item {
-    border: 1px solid $example-border-color;
+    border: 1px solid $basic-colour;
     clear: left;
-    padding: $example-default-padding;
+    padding: $default-padding;
 }
