Added matrix example parse*.html files to the examples folder

--- a/root/source/modules/breadcrumbs/css/global.scss
+++ b/root/source/modules/breadcrumbs/css/global.scss
@@ -9,3 +9,9 @@
 .breadcrumbs-float .breadcrumbs-item {
     float: left;
 }
+
+.breadcrumbs-separator:after {
+    content: "/";
+    color: $base-font-colour;
+    padding: 0 $default-padding;
+}
