Added parse file example for basic nav. Added current class style. Added trailing comment. Changed module list to include 2 newly added modules by default for the build

--- a/root/source/modules/nav_basic/css/global.scss
+++ b/root/source/modules/nav_basic/css/global.scss
@@ -19,7 +19,8 @@
 }
 
 .nav-basic-item-link:hover,
-.nav-basic-item-link:focus {
+.nav-basic-item-link:focus,
+.nav-basic-item-current {
     background: $highlight-colour;
     color: $highlight-text-colour;
 }
