--- a/root/source/core/css/common/mixins.scss
+++ b/root/source/core/css/common/mixins.scss
@@ -62,7 +62,9 @@
 // Add border box setting to an element.
 // http://paulirish.com/2012/box-sizing-border-box-ftw/
 @mixin border-box() {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 // Border radius helper
