--- a/root/source/modules/quick_search/css/global.scss
+++ b/root/source/modules/quick_search/css/global.scss
@@ -1,12 +1,13 @@
 .quick-search {
     width: 100%;
     position: relative;
-    @include clearfix();
 }
 
 .quick-search-form {
     margin: 0;
     padding: 0;
+    border: 1px solid $basic-colour;
+    @include clearfix();
 }
 
 // Search field
@@ -16,13 +17,13 @@
 }
 
 .quick-search-field-input {
-    border: 1px solid $basic-colour;
+    border: 0;
     text-indent: $default-padding/2;
     line-height: $default-padding*2;
     color: lighten($base-font-colour, 20%);
-    width: 100%;
     display: block;
     padding: $default-padding/2 0;
+    width: 100%;
 }
 
 .quick-search-field-input:focus {
@@ -32,12 +33,12 @@
 
 // Submit Button
 .quick-search-submit-button {
-    right: -1px; // Accounts for the border
+    right: 0; // Accounts for the border
+    top: 0;
     position: absolute;
 }
 
 .quick-search-submit-button-input {
-    border: 0;
     display: block;
     padding: $default-padding/2 $default-padding;
     background: $highlight-colour;
@@ -45,6 +46,17 @@
     color: $highlight-text-colour;
     text-align: center;
     line-height: $default-padding*2;
+}
+
+.lt-ie9 .quick-search-submit-button-input,
+.lt-ie9 .quick-search-field-input {
+    line-height: inherit;
+}
+
+// Workaround for the IE 8 and older text-indent bug
+.lt-ie9 .quick-search-field-input {
+    width: 98%;
+    padding: $default-padding/2 2%;
 }
 
 .quick-search-submit-button-input:hover,
