--- a/root/source/modules/overlay/css/global.scss
+++ b/root/source/modules/overlay/css/global.scss
@@ -1,10 +1,44 @@
-.overlay {
+.js-enabled .overlay {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
-    background: url(files/overlay.png) repeat;
-    background-image: rgba(0, 0, 0, 0.75); // Override the image with rgba if available
+    background: black;
+    @include opacity(80);
     width: 100%;
     height: 100%;
+}
+
+// The .js-enabled if the overlay does not need to appear with JS disabled.
+// It will prevent that slight flicker of hidden content, but means users without
+// JS cannot get to the content.
+.js-enabled .overlay-hidden {
+    display: none;
+}
+
+.js-enabled .overlay-modal {
+    position: absolute;
+    z-index: 1001;
+    top: 0;
+    left: 0;
+    @include transition(all .3s ease);
+}
+
+.js-enabled .overlay-modal-inner {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    background: white;
+    padding: $default-padding;
+}
+
+.js-enabled .overlay-modal-close {
+    position: absolute;
+    top: $default-padding/2;
+    right: $default-padding/2;
+}
+
+.no-js .overlay-modal-close {
+    display: none;
 }
