Make the default slideshow nav for small screen look a little less lost

--- a/root/source/modules/slideshow/css/global.scss
+++ b/root/source/modules/slideshow/css/global.scss
@@ -5,6 +5,11 @@
     border: 1px solid $basic-colour;
 }
 
+.slideshow {
+    width: 100%;
+    background: $highlight-colour;
+}
+
 .slideshow-slides {
     @include list-reset();
     @include clearfix();
