--- a/root/source/core/css/common/mixins.scss
+++ b/root/source/core/css/common/mixins.scss
@@ -1,8 +1,8 @@
-// Progressive enhancement font-sizing technique.
-// Start with pixels -> em -> rem
+// REM font sizing with pixel fall back
+// This technique will allow external font sizes to be set for html and respected
+// if REMs are supported (everything but IE8 and older).
 @mixin font-size($sizeValue: 1){
   font-size: ($sizeValue * $base-font-pixel) + px;
-  font-size: $sizeValue + em;
   font-size: $sizeValue + rem;
 }
 
