--- a/root/source/core/css/print.scss
+++ b/root/source/core/css/print.scss
@@ -9,7 +9,7 @@
  *     {%= author_email %} - @@date - First revision
  */
 
-/* HTML 5 Boilerplate Print Stylesheet */
+// HTML 5 Boilerplate Print Stylesheet 
 * {
     background: transparent !important;
     color: #000 !important; // Black prints faster: h5bp.com/s
