Adjusted the default separator padding slightly reducing by half

--- a/root/source/modules/breadcrumbs/css/global.scss
+++ b/root/source/modules/breadcrumbs/css/global.scss
@@ -13,5 +13,5 @@
 .breadcrumbs-separator:after {
     content: "/";
     color: $base-font-colour;
-    padding: 0 $default-padding;
+    padding: 0 $default-padding/2;
 }
