Fixed the dropdown styles and examples for IE 7.

--- a/root/source/modules/nav_dropdown/css/global.scss
+++ b/root/source/modules/nav_dropdown/css/global.scss
@@ -1,3 +1,13 @@
+// For IE 7 you can inject these rules into the adjacent siblings that come
+// after the drop down menu. This will solve the drop down sub appearing beneath
+// other elements with absolutely positioned elements with a z-index.
+
+// Example
+// .main-wrapper {
+//   position: relative;
+//   z-index: -1;
+// }
+
 .nav-dropdown-list,
 .nav-dropdown-sub {
     @include list-reset();
@@ -48,7 +58,7 @@
 ///////////////
 
 .nav-dropdown.nav-dropdown-mega .nav-dropdown-sub {
-    width: auto;
+    width: 100%;
     background: $basic-colour;
 }
 
