--- a/root/source/core/css/examples.scss
+++ b/root/source/core/css/examples.scss
@@ -61,7 +61,11 @@ body {
     top: $default-padding;
     right: $default-padding;
 }
+// Frustratingly the styles for IE 7 have to be pulled behind to have them appear
+// in relation to the slide show.
 .lt-ie9 .main-wrapper {
+    position: relative;
+    z-index: -1;
     @include row();
 }
 .lt-ie9 .left-column {
