--- a/root/source/core/css/wide.scss
+++ b/root/source/core/css/wide.scss
@@ -11,8 +11,8 @@
 
 /*
  * Table of Contents
- * 1. Modules
-@@toc
+ * Modules
+@@wide_toc
  */
 
 @import "common/variables.scss";
@@ -24,9 +24,9 @@
 
 /*
 --------------------
-1. Modules
+Modules
 --------------------
 */
 
 // The modules keyword will get replaced by automated, numbered module CSS output
-//@@modules
+@@wide_modules
