--- a/root/source/modules/header_logo/css/global.scss
+++ b/root/source/modules/header_logo/css/global.scss
@@ -1,6 +1,6 @@
 .header-logo {
     border: 0;
-    background: transparent url(files/logo.png) 0 0 no-repeat;
+    background: transparent url(@@files/logo.png) 0 0 no-repeat;
     width: 135px;
     height: 79px;
     display: block;
