--- a/root/source/modules/font_icons/css/font-awesome.scss
+++ b/root/source/modules/font_icons/css/font-awesome.scss
@@ -26,8 +26,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('./files/fontawesome-webfont.eot?v=3.1.0');
-  src: url('./files/fontawesome-webfont.eot?#iefix&v=3.1.0') format('embedded-opentype'), url('./files/fontawesome-webfont.woff?v=3.1.0') format('woff'), url('./files/fontawesome-webfont.ttf?v=3.1.0') format('truetype'), url('./files/fontawesome-webfont.svg#fontawesomeregular?v=3.1.0') format('svg');
+  src: url('@@files/fontawesome-webfont.eot?v=3.1.0');
+  src: url('@@files/fontawesome-webfont.eot?#iefix&v=3.1.0') format('embedded-opentype'), url('@@files/fontawesome-webfont.woff?v=3.1.0') format('woff'), url('@@files/fontawesome-webfont.ttf?v=3.1.0') format('truetype'), url('@@files/fontawesome-webfont.svg#fontawesomeregular?v=3.1.0') format('svg');
   font-weight: normal;
   font-style: normal;
 }
