Added glow effect mixin from foundation. Added strip unit function from foundation.

--- a/root/source/core/css/common/functions.scss
+++ b/root/source/core/css/common/functions.scss
@@ -7,3 +7,8 @@
 @function pxToRem($pixel) {
   @return $pixel/$base-font-pixel + rem;
 }
+
+// Strip unit taken from foundation
+@function stripUnit($num) {
+  @return $num / ($num * 0 + 1);
+}
