--- a/root/source/core/css/common/mixins.scss
+++ b/root/source/core/css/common/mixins.scss
@@ -68,6 +68,20 @@
     filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=#{$msRotVal});
 }
 
+// Glow effect taken from foundation
+@mixin block-glowing-effect($selector:focus, $fade-time:300ms, $glowing-effect-color:blue) {
+  -webkit-transition: -webkit-box-shadow $fade-time, border-color $fade-time ease-in-out;
+  -moz-transition: -moz-box-shadow $fade-time, border-color $fade-time ease-in-out;
+  transition: box-shadow $fade-time, border-color $fade-time ease-in-out;
+
+  &:#{$selector} {
+    -webkit-box-shadow: 0 0 5px $glowing-effect-color;
+    -moz-box-shadow: 0 0 5px $glowing-effect-color;
+    box-shadow: 0 0 5px $glowing-effect-color;
+    border-color: $glowing-effect-color;
+  }
+}
+
 // Inline-block display mixin that works on older IE
 @mixin inline-block() {
   display: inline-block;
@@ -128,6 +142,6 @@
   color: transparent;
   border: 0;
   overflow: hidden;
-  
+
   .no-rgba & { text-indent: 9999em; }
 }
