Quick search input re-designed to use prefix-only flex solution and fallback to css display:table layout when not supported or js is disabled

--- a/root/source/core/css/common/mixins.scss
+++ b/root/source/core/css/common/mixins.scss
@@ -145,3 +145,18 @@
 
   .no-rgba & { text-indent: 9999em; }
 }
+
+// Font icon shortcut
+@mixin icon-font($code) {
+  font-family: "FontAwesome";
+  content: $code;
+}
+
+// Display flex with browser prefixes
+@mixin display-flex() {
+  display: -webkit-box;      // OLD - iOS 6-, Safari 3.1-6
+  display: -moz-box;         // OLD - Firefox 19- (buggy but mostly works)
+  display: -ms-flexbox;      // TWEENER - IE 10
+  display: -webkit-flex;     // NEW - Chrome
+  display: flex;             // NEW, Spec - Opera 12.1, Firefox 20+
+}
