--- a/root/source/modules/quick_search/css/global.scss
+++ b/root/source/modules/quick_search/css/global.scss
@@ -7,7 +7,7 @@
     vertical-align: middle;
     white-space: nowrap;
     color: lighten($base-font-colour, 20%);
-    border: 1px solid $base-border-colour;
+    border: 1px solid $highlight-colour;
     padding: $default-padding/2 $default-padding;
     border-right: 0;
     margin: 0;
