--- a/root/source/modules/back_to_top/css/global.scss
+++ b/root/source/modules/back_to_top/css/global.scss
@@ -4,18 +4,14 @@
     text-align: center;
     display: block;
     background: $highlight-colour;
+    color: $highlight-text-colour;
+    &:visited {
+        color: $highlight-text-colour;
+    }
     line-height: $default-padding*2;
-    height: $default-padding*2;
-    width: $default-padding*2;
+    width: 100%;
     overflow: hidden;
     text-decoration: none;
-    @include opacity(55);
-}
-
-.back-to-top-button:after {
-    content: "\2191 "; // Unicode up arrow
-    @include font-size(1.5);
-    color: $highlight-text-colour;
 }
 
 .back-to-top-button:focus,
