Replaced the google chart example with something that reflects better progressive enhancement. Example plugin draws the values from the dom to populate the google dataTable

--- a/root/source/modules/chart/css/global.scss
+++ b/root/source/modules/chart/css/global.scss
@@ -1,3 +1,15 @@
+.chart-loaded .chart-data {
+    @include screen-hide;
+}
+
+.no-js .chart-figure {
+    display: none;
+}
+
 .chart-output {
     width: 300px;
+}
+
+.chart-caption {
+    @include font-size(0.8);
 }
