Fixed issues with multiple charts on the one page. Added readme. Added more example charts

--- a/root/source/modules/chart/css/global.scss
+++ b/root/source/modules/chart/css/global.scss
@@ -13,3 +13,10 @@
 .chart-caption {
     @include font-size(0.8);
 }
+
+.chart-error {
+    color: #ff0000;
+    &:before {
+        content: "Error: ";
+    }
+}
