--- a/root/source/modules/chart/css/global.scss
+++ b/root/source/modules/chart/css/global.scss
@@ -6,11 +6,13 @@
     display: none;
 }
 
+// It's possible to restrict the size of the chart using CSS
 .chart-output {
-    width: 300px;
+    //width: 300px;
 }
 
 .chart-caption {
+    font-style: italic;
     @include font-size(0.8);
 }
 
