Updated font awesome library to latest available. Used .scss options to allow for customisation of the font awesome build. Added variables to the common variables include.

--- a/root/source/modules/font_icons/css/global.scss
+++ b/root/source/modules/font_icons/css/global.scss
@@ -1,1 +1,4 @@
+// Pull in the scss for font awesome
+// If you need to trim elements of this out you can look at the font-awesome.scss and comment out
+// the import directives
 @import "source/modules/font_icons/css/font-awesome";
